--- a/vignettes/longevityTools_eDRUG.html
+++ b/vignettes/longevityTools_eDRUG.html
@@ -347,6 +347,9 @@ sum(degOL_PMID26490707[,2] &gt; 0) # Drugs with any overlap</code></pre>
 ## monorden_HL60                  5.195432e-09
 ## podophyllotoxin_HL60           5.474077e-09
 ## 15-delta prostaglandin J2_HL60 6.007155e-09</code></pre>
+<div align="right">
+<a href>Back to Table of Contents</a>
+</div>
 </div>
 <div id="identify-deg-overlaps-with-sood-et-al.--sood2015-pb" class="section level2">
 <h2><span class="header-section-number">6.7</span> Identify DEG overlaps with Sood et al. <span class="citation">(2015)</span></h2>
