--- a/vignettes/longevityTools_eDRUG.html
+++ b/vignettes/longevityTools_eDRUG.html
@@ -386,6 +386,9 @@ sum(degOL_PMID26343147[,2] &gt; 0) # Drugs with any overlap</code></pre>
 ## remoxipride_MCF7                0.004651163           211        5         1 0.0819785629 1.0000000
 ## tobramycin_HL60                 0.004651163           211        5         1 0.0819785629 1.0000000
 ## triamcinolone_PC3               0.004651163           211        5         1 0.0819785629 1.0000000</code></pre>
+<div align="right">
+<a href>Back to Table of Contents</a>
+</div>
 </div>
 <div id="drugs-affecting-known-longevity-genes" class="section level2">
 <h2><span class="header-section-number">6.8</span> Drugs affecting known longevity genes</h2>
