--- a/vignettes/01_Overview/mydoc_current_projects.html
+++ b/vignettes/01_Overview/mydoc_current_projects.html
@@ -686,7 +686,7 @@ $('#toc').on('click', 'a', function() {
 
     <ul>
       <li>Analysis vignette: <a href="https://htmlpreview.github.io/?https://github.com/tgirke/longevityTools/blob/master/vignettes/longevityTools_eQTL.html" target="_blank">longevityTools_eQTL</a></li>
-      <li>Results: <a href="/downloads/">Downloads</a></li>
+      <li>Results: <a href="http://girke.bioinformatics.ucr.edu/longevityTools/mydoc/mydoc_downloads.html">Downloads</a></li>
     </ul>
   </li>
   <li>
@@ -694,7 +694,7 @@ $('#toc').on('click', 'a', function() {
 
     <ul>
       <li>Analysis vignette: <a href="https://htmlpreview.github.io/?https://github.com/tgirke/longevityTools/blob/master/vignettes/longevityTools_eDRUG.html" target="_blank">longevityTools_eDRUG</a></li>
-      <li>Results: <a href="/downloads/">Downloads</a></li>
+      <li>Results: <a href="http://girke.bioinformatics.ucr.edu/longevityTools/mydoc/mydoc_downloads.html">Downloads</a></li>
     </ul>
   </li>
   <li>
@@ -702,7 +702,7 @@ $('#toc').on('click', 'a', function() {
 
     <ul>
       <li>Analysis vignette: longevityTools_Drugs: will be added soon</li>
-      <li>Results: <a href="/downloads/">Downloads</a></li>
+      <li>Results: <a href="http://girke.bioinformatics.ucr.edu/longevityTools/mydoc/mydoc_downloads.html">Downloads</a></li>
     </ul>
   </li>
 </ol>
