--- a/vignettes/01_Overview/mydoc_current_projects.html
+++ b/vignettes/01_Overview/mydoc_current_projects.html
@@ -672,13 +672,13 @@ $('#toc').on('click', 'a', function() {
     <a target="_blank" href="https://github.com/tgirke/manuals/tree/master/mydoc/" class="btn btn-default githubEditButton" role="button"><i class="fa fa-github fa-lg"></i> Edit me</a>
     
 -->
-<h2 id="current-projects">Current projects</h2>
-
-<h3 id="overview-vignette">Overview Vignette</h3>
+<h2 id="overview-vignette">Overview Vignette</h2>
 
 <ul>
   <li><a href="https://htmlpreview.github.io/?https://github.com/tgirke/longevityTools/blob/master/vignettes/longevityTools.html" target="_blank">longevityTools</a></li>
 </ul>
+
+<h2 id="workflow-vignettes">Workflow Vignettes</h2>
 
 <ol>
   <li>
