--- a/vignettes/01_Overview/home.html
+++ b/vignettes/01_Overview/home.html
@@ -677,8 +677,8 @@ $('#toc').on('click', 'a', function() {
 <h2 id="overview">Overview</h2>
 
 <p>An overview of the Longevity Genomics project is given
-<a href="http://www.longevitygenomics.org/">here</a>. This site provides links to
-technical descriptions of the individual project components in form of
+<a href="http://www.longevitygenomics.org/">here</a>. The affiliated <code>longevityTools</code> site
+provides technical descriptions of the individual project components in form of
 vignettes containing detailed analysis protocols along with well defined
 objectives, descriptions of findings and downloads of relevant results.</p>
 
