--- a/vignettes/01_Overview/home.html
+++ b/vignettes/01_Overview/home.html
@@ -674,6 +674,8 @@ $('#toc').on('click', 'a', function() {
     <a target="_blank" href="https://github.com/tgirke/manuals/tree/master/mydoc/" class="btn btn-default githubEditButton" role="button"><i class="fa fa-github fa-lg"></i> Edit me</a>
     
 -->
+<p><a href="https://gitter.im/tgirke/longevityTools?utm_source=badge&amp;utm_medium=badge&amp;utm_campaign=pr-badge&amp;utm_content=badge"><img src="https://badges.gitter.im/tgirke/longevityTools.svg" alt="Join the chat at https://gitter.im/tgirke/longevityTools" /></a></p>
+
 <h2 id="overview">Overview</h2>
 
 <p>An overview of the Longevity Genomics project is given
