--- a/mydoc/home.html
+++ b/mydoc/home.html
@@ -697,7 +697,7 @@ help files provided by the R packages (for an example see
 All analysis results can be fully reproduced by rerunning the commands given in
 the vignettes. Instead of regenerating result files from scratch, users can
 also download them via URLs provided in the corresponding sections of the
-vignettes or directly from the <a href="/downloads/">Downloads</a>
+vignettes or directly from the <a href="http://girke.bioinformatics.ucr.edu/longevityTools/mydoc/mydoc_downloads.html">Downloads</a>
 page of this site.
 While improving transparency for external users, the chosen analysis strategy 
 greatly facilitates collaborations among the different teams and members 
