--- a/title-checker.html
+++ b/title-checker.html
@@ -985,8 +985,44 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <hr/>
-<p>Problem: The sidebar item title "1. Introduction" does not match the page title "longevityToolsOverview - Analysis Tools for Longevity Research".</p>
+<p>Problem: The sidebar item title "1. Introduction" does not match the page title "longevityTools_Overview - Analysis Tools for Longevity Research".</p>
+
+
+
+
 
 
 
@@ -1255,8 +1291,16 @@
 
 
 
+
+
+
+
 <hr/>
 <p>Problem: The sidebar item title "3. Overview of object clases, methods and functions" does not match the page title "Overview of object clases, methods and functions".</p>
+
+
+
+
 
 
 
@@ -1525,6 +1569,10 @@
 
 
 
+
+
+
+
 <hr/>
 <p>Problem: The sidebar item title "5. Funding" does not match the page title "Funding".</p>
 
@@ -1660,8 +1708,16 @@
 
 
 
+
+
+
+
 <hr/>
 <p>Problem: The sidebar item title "6. Version information" does not match the page title "Version information".</p>
+
+
+
+
 
 
 
@@ -1956,8 +2012,16 @@
 
 
 
+
+
+
+
 <hr/>
-<p>Problem: The sidebar item title "1. Introduction" does not match the page title "longevityToolseQTL - eSNP and GWAS Analysis".</p>
+<p>Problem: The sidebar item title "1. Introduction" does not match the page title "longevityTools_eQTL - eSNP and GWAS Analysis".</p>
+
+
+
+
 
 
 
@@ -2226,8 +2290,16 @@
 
 
 
+
+
+
+
 <hr/>
 <p>Problem: The sidebar item title "3. Getting Started" does not match the page title "Getting Started".</p>
+
+
+
+
 
 
 
@@ -2496,8 +2568,16 @@
 
 
 
+
+
+
+
 <hr/>
 <p>Problem: The sidebar item title "5. Sample data from GTEx" does not match the page title "Sample data from GTEx".</p>
+
+
+
+
 
 
 
@@ -2766,8 +2846,16 @@
 
 
 
+
+
+
+
 <hr/>
 <p>Problem: The sidebar item title "7. SNP clumping using PLINK" does not match the page title "SNP clumping using PLINK".</p>
+
+
+
+
 
 
 
@@ -3036,8 +3124,16 @@
 
 
 
+
+
+
+
 <hr/>
 <p>Problem: The sidebar item title "9. Version information" does not match the page title "Version information".</p>
+
+
+
+
 
 
 
@@ -3264,8 +3360,16 @@
 
 
 
+
+
+
+
 <hr/>
-<p>Problem: The sidebar item title "1. Introduction" does not match the page title "longevityToolseDRUG - Connecting Drug- and Age-related Gene Expression Signatures".</p>
+<p>Problem: The sidebar item title "1. Introduction" does not match the page title "longevityToolse_DRUG - Connecting Drug- and Age-related Gene Expression Signatures".</p>
+
+
+
+
 
 
 
@@ -3534,8 +3638,16 @@
 
 
 
+
+
+
+
 <hr/>
 <p>Problem: The sidebar item title "3. Setup of working environment" does not match the page title "Setup of working environment".</p>
+
+
+
+
 
 
 
@@ -3804,8 +3916,16 @@
 
 
 
+
+
+
+
 <hr/>
 <p>Problem: The sidebar item title "5. Pre-processing of CEL files" does not match the page title "Pre-processing of CEL files".</p>
+
+
+
+
 
 
 
@@ -4074,8 +4194,16 @@
 
 
 
+
+
+
+
 <hr/>
 <p>Problem: The sidebar item title "7. Connectivity maps enrichment analysis" does not match the page title "Connectivity maps enrichment analysis".</p>
+
+
+
+
 
 
 
@@ -4344,8 +4472,16 @@
 
 
 
+
+
+
+
 <hr/>
 <p>Problem: The sidebar item title "9. Age-disease network analysis" does not match the page title "Age-disease network analysis".</p>
+
+
+
+
 
 
 
@@ -4614,8 +4750,16 @@
 
 
 
+
+
+
+
 <hr/>
 <p>Problem: The sidebar item title "11. Version information" does not match the page title "Version information".</p>
+
+
+
+
 
 
 
@@ -4803,7 +4947,146 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <hr/>
+
+
+
+
 
 
 
