--- a/vignettes/01_Overview/home.html
+++ b/vignettes/01_Overview/home.html
@@ -697,7 +697,7 @@ $('#toc').on('click', 'a', function() {
 <p>The <code>longevityTools</code> site is part of the <a href="http://www.longevitygenomics.org">Longevity
 Genomics</a> project that aims to advance
 longevity research by integrating data from a variety of genome-wide profiling
-studies. It provides a technical descriptions of the individual project
+studies. The site provides a technical descriptions of the individual project
 components in form of vignettes containing detailed analysis protocols along
 with well defined objectives, descriptions of findings and downloads of
 relevant results.</p>
