--- a/mydoc/mydoc_funding.html
+++ b/mydoc/mydoc_funding.html
@@ -690,7 +690,7 @@ $('#toc').on('click', 'a', function() {
     <a target="_blank" href="https://github.com/tgirke/manuals/tree/master/mydoc/" class="btn btn-default githubEditButton" role="button"><i class="fa fa-github fa-lg"></i> Edit me</a>
     
 -->
-<center> ![nia](../common_images/nia_logo80.jpg) </center>
+<center> <img title="NIA Logo" src="images/nia_logo80.jpg" /> </center>
 
 
 
