--- a/mydoc/mydoc_longevityTools_eQTL_01.html
+++ b/mydoc/mydoc_longevityTools_eQTL_01.html
@@ -692,6 +692,8 @@ $('#toc').on('click', 'a', function() {
 
 <p>Last update: 15 February, 2016</p>
 
+<p>The single-page R markdown vignette of this workflow is <a href="https://htmlpreview.github.io/?https://github.com/tgirke/longevityTools/blob/master/vignettes/longevityTools_eQTL.html">here</a>.</p>
+
 <h2 id="introduction">Introduction</h2>
 <p>This vignette is part of the NIA funded Longevity Genomics project. For more information on this project please visit its 
 website <a href="http://www.longevitygenomics.org/projects/">here</a>. The GitHub repository of the corresponding R package 
