--- a/mydoc/mydoc_longevityTools_eDRUG_01.html
+++ b/mydoc/mydoc_longevityTools_eDRUG_01.html
@@ -690,7 +690,9 @@ $('#toc').on('click', 'a', function() {
 -->
 <p>Authors: Thomas Girke, Danjuma Quarless, Tyler Backman, Kuan-Fu Ding, Jamison McCorrison, Nik Schork, Dan Evans</p>
 
-<p>Last update: 15 February, 2016</p>
+<p>Last update: 16 February, 2016</p>
+
+<p>The single-page R markdown vignette of this workflow is <a href="https://htmlpreview.github.io/?https://github.com/tgirke/longevityTools/blob/master/vignettes/longevityTools_eDRUG.html">here</a>.</p>
 
 <h2 id="introduction">Introduction</h2>
 <p>This vignette is part of the NIA funded Longevity Genomics project. For more information on this project please visit its 
