--- a/vignettes/01_Overview/home.html
+++ b/vignettes/01_Overview/home.html
@@ -697,7 +697,9 @@ $('#toc').on('click', 'a', function() {
 <p>The <code>longevityTools</code> site is part of the <a href="http://www.longevitygenomics.org">Longevity
 Genomics</a> project that aims to advance
 longevity research by integrating data from a variety of genome-wide profiling
-studies. The site provides a technical descriptions of the individual project
+studies. 
+<img align="right" title="longevitylogo" src="longevityTools_home_images/longevity.png" /><img />
+The site provides a technical descriptions of the individual project
 components in form of vignettes containing detailed analysis protocols along
 with well defined objectives, descriptions of findings and downloads of
 relevant results.</p>
@@ -739,7 +741,7 @@ accessible via web-based solutions in the future such as <a href="http://shiny.r
             <div class="row">
                 <div class="col-lg-12 footer">
                &copy;2016 UC Riverside. All rights reserved. <br />
- Site last generated: Feb 16, 2016 <br />
+ Site last generated: Feb 20, 2016 <br />
 <p><img src="../common_images/company_logo.png/></p>
                 </div>
             </div>
